--- a/and-bible/app/src/main/res/values-pl/strings.xml
+++ b/and-bible/app/src/main/res/values-pl/strings.xml
@@ -82,8 +82,8 @@
   <string name="prefs_text_size_title">Rozmiar czcionki</string>
   <string name="prefs_text_size_summary">Powiększ/pomniejsz rozmiar czcionki</string>
   <string name="prefs_text_size_sample_text">Zwykły tekst</string>
-  <string name="prefs_screen_timeout_title">Uśpij</string>
-  <string name="prefs_screen_timeout_summary">Czas bezczynności zanim ekran zostanie wyłączony</string>
+  <string name="prefs_screen_keep_on_title">Trzymaj ekran włączony</string>
+  <string name="prefs_screen_keep_on_summary">Nie wyłączaj ekranu podczas korzystania z aplikacji</string>
   <string name="x_minutes">%d minut</string>
   <string name="prefs_interface_locale_title">Język programu</string>
   <string name="prefs_interface_locale_summary">Wybierz język</string>
@@ -98,6 +98,8 @@
   <string name="prefs_split_mode_automatic">Automatycznie</string>
   <string name="prefs_split_mode_summary">Jak rozdzielić wiele ekranów w trybie okienkowym?</string>
   <string name="prefs_split_mode_title">Ułożenie okien</string>
+  <string name="prefs_request_sdcard_permission_title">Korzystaj z ręcznie skopiowanych dokumentów</string>
+  <string name="prefs_request_sdcard_permission_summary">Korzystaj z ręcznie zainstalowanych dokumentów w katalogu “jsword” na karcie SD</string>
   <!--Window-->
   <string name="window">Menu okna</string>
   <string name="windowClose">Zamknij</string>
@@ -233,6 +235,7 @@
   <string name="restore">Przywróć</string>
   <string name="restore_confirmation">Czy chcesz nadpisać swoje notatki i zakładki?</string>
   <string name="restore_success">Przywróć moje notatki i zakładki zapisane w %s na karcie SD</string>
+  <string name="error_no_backup_file">Nie można odnaleźć pliku kopii zapasowej</string>
   <!--About-->
   <string name="about_copyright">Prawa autorskie: %s</string>
   <string name="about_version">Wersja: %s</string>
@@ -268,4 +271,5 @@
   <string name="error_page_too_large">Strona jest za duża i nie zostanie wczytana</string>
   <string name="error_key_not_in_document">Nie znaleziono w dokumencie</string>
   <string name="empty_list">Brak elementów do wyświetlenia</string>
+  <string name="notification_channel_progress_status">Powiadomienie postępu stanu pobierań, itp.</string>
 </resources>
